# cadence-beats

./: .env.example  .gitignore  DECISIONS.md  README.md  pyproject.toml
cadence_beats/: bpm.py  cli.py  config.py  garmin.py  generator.py  spotify.py
docs/: index.html
